Fix scrolling of topics selector on mobile

--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -189,6 +189,8 @@ $icon-text-separation: 19px;
   visibility: hidden;
   transition: opacity 0.4s ease-in-out;
   width: 100%;
+  overflow-y: auto;
+  padding-top: 5px;
 
   @media screen and (min-width: $br-single-column) {
     padding-top: 0;
